--- a/atlas.html
+++ b/atlas.html
@@ -26,7 +26,7 @@
 					<p>
 						Atlas (working title) is a visual pinboard for music discovery and exploration. Users can search millions of songs in the Apple MusicKit database and pin their favorite discoveries to a board that can be shared with friends and identifies trending artists, albums, and songs.<br><br>
 
-						A reimagined metaphor of my app <a href="listenlist.html">Listenlist</a>.
+						This is a reimagined metaphor and design for my app <a href="listenlist.html">Listenlist</a>.
 					</p>
 
 					<hr class="lead-hr">
@@ -38,7 +38,7 @@
 					<br>
 
 					<p>
-						Users can tap on pinned items to see more details and listen to full album discographies and read biographies about artists.
+						Users can tap on pinned items to see more details, listen to full album discographies, and read biographies about artists.
 					</p>
 
 					<hr class="lead-hr">
