--- a/cbtn.html
+++ b/cbtn.html
@@ -46,7 +46,7 @@
 
 					<br>
 					<p>
-						The UI was built upon a Material-like card metaphor. This created a modality for content that could easily scale between web, mobile, tablet and desktop platforms.
+						The UI was built upon a card metaphor. This created a modality for content that could easily scale between the web, mobile, tablet, and native desktop platforms.
 					</p>
 
 					<hr class="lead-hr">
@@ -70,21 +70,21 @@
 					<br>
 
 					<p>
-						The 10' experience for TVOS and Roku adopted an inverted interface to better embrace the platforms and reduce visual fatigue on brighter and larger displays often found in a darker setting.
+						The 10-foot experience for TVOS and Roku adopted an inverted interface to better embrace the native platforms and reduce visual fatigue on brighter and larger displays often found in a darker setting.
 					</p>
 
 					<hr class="lead-hr">
 
 					<img class="img" src="images/cbt-tvos.jpg"></a>
 					<hr>
-					<p class="fig">TVOS Design.</p>
+					<p class="fig">Course detail screen. (TVOS)</p>
 
 					<br>
 
 					<p>
 						Beginning with the brand color, Nugget Gold, I extracted a primary accent color using triads on the color wheel. The remaining 4 colors were derived by calculating a similar distance in each RGB direction.<br><br>
 
-						A monoline iconography style was designed to be lightweight, simple and easily scalable across multiple device platforms.
+						A monoline iconography style was designed to be lightweight, simple and easily scalable across multiple device platforms and implementation sizes.
 					</p>
 
 					<hr class="lead-hr">
@@ -103,12 +103,12 @@
 
 					<img class="img" src="images/cbt-nuggetstyle.jpg"></a>
 					<hr>
-					<p class="fig">Design system and specification documentation.</p>
+					<p class="fig">Design system and specification documentation samples.</p>
 
 					<br>
 
 					<p>
-						In addition to remote and in-person moderated usability testing, we validated success by monitoring our primary KPIs, measuring MAU and session data in Fabric analytics and App Store reviews. Currently iOS and Android are both 5-star apps.
+						In addition to remote and in-person moderated usability testing, we validated success by monitoring change in our primary KPIs, measuring MAU and session data in Fabric analytics, and App Store reviews. Currently iOS and Android are both 5-star apps.
 					</p>
 
 					<hr class="lead-hr">
@@ -136,7 +136,7 @@
 					<h1>Learner Experience 2.0</h1>
 
 					<p>
-						We built an app suite that increased engagement and renewals by making our content available anytime, anywhere but to revolutionize the learning experience, we learned that we needed to re-imagine it completely.
+						We built an app suite that increased engagement and renewals by making our content available anytime, anywhere but to revolutionize the learning experience, we learned that we needed to re-imagine it completely. Learner Experience 2.0 (LX-2) is an effort that I lead to challenge our greatest assumptions about our business and what we know about online education.
 					</p>
 
 					<hr class="lead-hr">
@@ -148,7 +148,7 @@
 					<br>
 
 					<p>
-						The interface is separated into two spaces: The 2/3, which contains the learning content, and the 1/3, which contains mobile app-like auxiliary controls like notes, quizzes, games, browse and search. In an instance where two concurrent devices are present, these modes are meant to be able to break into their own individual devices but synchronously maintain the learning experience.
+						The interface is separated into two spaces: The 2/3, which contains the learning content, and the 1/3, which contains mobile app-like auxiliary controls like notes, quizzes, games, browse, and search. In an instance where two concurrent devices are present, these modes are meant to be able to break into their own individual devices while synchronously maintaining the learning experience.
 					</p>
 
 					<hr class="lead-hr">
@@ -160,7 +160,7 @@
 					<br>
 
 					<p>
-						Learner Experience 2.0 will replace the CBTN training app and become the preferred method for watching CBT Nuggets learning content.
+						Learner Experience 2.0 will replace the current training app suite and become the primary method for consuming CBT Nuggets learning content. A major part of this effort is to create a platform that can transcend video content alone and host a wide array of learning tools in one coheesive experience.
 					</p>
 
 					<hr class="lead-hr">
