--- a/google.html
+++ b/google.html
@@ -24,7 +24,7 @@
 					<h1>Immersive Knowledge Panels</h1>
 
 					<p>
-						The Knowledge UX team (Google Search) was exploring the concept of an immersive search query experience for varying topics. My query was “World Religion”. Once immersed in the knowledge panel, users could explore a consistent presentation of information for various subtopics.
+						The Knowledge UX team (Google Search) was exploring the concept of an immersive search query experience for top research topics. The query I chose was “World Religion”. Once immersed in the knowledge panel, users could explore a consistent presentation of information for various subtopics.
 					</p>
 
 					<hr class="lead-hr">
@@ -50,7 +50,7 @@
 					<h1>Search Pagination Redesign</h1>
 
 					<p>
-						Working as a designer on one of the world’s most trafficked pages on the internet came with many challenges. Redesigning search pagination on mobile was a seemingly small, but monumental effort.
+						Working as a designer on one of the world’s most trafficked pages on the internet came with many challenges. Redesigning pagination on the mobile search results page was a seemingly small, but monumental effort.
 					</p>
 
 					<hr class="lead-hr">
@@ -62,7 +62,7 @@
 					<br>
 
 					<p>
-						All pagination controls rolled up into a single card which made for a clean presentation and an easily tappable surface.
+						All pagination controls rolled up into a single card which made for a clean presentation and an easily tappable surface that fit perfectly in rhythm with a newly implemented card UI. Research showed that if a user has to interact with pagination the overwhelming majority would only navigate to page 2. This design optimized for the "next page" case and used progressive disclosure to show more controls once the user hit pages 2 and 3+.
 					</p>
 
 					<hr class="lead-hr">
@@ -90,7 +90,7 @@
 					<h1>"Monroe"</h1>
 
 					<p>
-						Monroe was an exploration in beautifying Google Search. Much of the exploratory thinking that came from this project inspired what became Material Design.
+						Monroe was an exploration in beautifying Google Search through visual and motion design. Much of the exploratory thinking and prototyping that came from this project inspired what became the Material Design Specification.
 					</p>
 
 					<hr class="lead-hr">
