--- a/listenlist.html
+++ b/listenlist.html
@@ -24,7 +24,7 @@
 					<h1>Listenlist</h1>
 
 					<p>
-						Listenlist began as a “scratch your own itch” project to provide a solution for keeping track of serendipitous music discoveries and word of mouth recommendations. Users could search for an artist and add results to a simple todo list where photos and biographies were pulled in from Last.fm and fully streamable discographies were retrieved from the iTunes music database.
+						Listenlist began as a “scratch your own itch” project to provide a solution for keeping track of serendipitous music discoveries and word of mouth recommendations. Users could search for an artist and add results to a simple todo list where photos and biographies were pulled in from Last.fm and streamable discographies were retrieved from the iTunes music database.
 					</p>
 
 					<hr class="lead-hr">
@@ -35,7 +35,7 @@
 
 					<br>
 					<p>
-						Product development started with a simple user story which was then adopted to a canonical flow diagram which mapped out the entire experience. This document was used to flesh out architecture and communicate with my developer, identifying areas where API calls, authentication or other server-side information would be necessary.
+						Product development started with a simple user story which was then adopted to a canonical flow diagram, mapping out the entire experience. This document was used to flesh out architecture and communicate with my developer, identifying areas where API calls, authentication or other server-side information would be necessary.
 					</p>
 
 					<hr class="lead-hr">
@@ -46,7 +46,7 @@
 
 					<br>
 					<p>
-						I designed out high fidelity mockups for each screen and various screen states, such as missing endpoints, no search results, empty list and error states. I then created prototypes using FramerJS to illustrate micro-interactions such as context menus and interface transitions. These were used to communicate animation and movement details to my developer.
+						I designed out high fidelity mockups for each screen and various screen states, such as missing endpoints, no search results, empty list, and error states. I then created prototypes using Framer to illustrate micro-interactions such as context menus and interface transitions. These were used to communicate animation and movement details to my developer.
 					</p>
 
 					<hr class="lead-hr">
