--- a/mockfolio.html
+++ b/mockfolio.html
@@ -39,7 +39,7 @@
 
 					<br>
 					<p>
-						Each project is organized into sections, pages, and screens. A section can have many pages and a page can have many screens. Each screen has a notes section where specific details about the design, behaviors, and functionality are listed. Designers can link directly to each screen from an external source, making it handy to reference a design in a Slack conversation or an email.
+						Each project is organized into sections, pages, and screens. A section can have many pages and a page can have many screens. Each screen has a notes section where specific details about the design, behaviors, and functionality can be explained. Designers can generate links that point directly to each screen from an external source, making it handy to reference a specific design in a Slack conversation or an email.
 					</p>
 
 					<hr class="lead-hr">
@@ -50,7 +50,7 @@
 
 					<br>
 					<p>
-						A simple backend was set up to manage projects. When creating a new folio, designers can assign one of many hardware device frames to house their design.
+						A simple backend was set up to manage projects. When creating a new folio, designers can assign one of many hardware device frames to house their designs. The context of the device helps communicate scale and provides a better sense for how the design will be implemented.
 					</p>
 
 					<hr class="lead-hr">
