--- a/scann.html
+++ b/scann.html
@@ -22,7 +22,7 @@
 					</p>
 
 					<p>
-						Scann is a gesture-based mobile application designed specifically for the blind or eyes-free use case. It introduces the concept of audible browsing where music is played at a given time interval (5-10s) before moving on to another point in a listener’s music library. When desired content is played the listener can force touch to pin that album and play from within it.
+						Scann is a gesture-based mobile application designed specifically for the blind or eyes-free use cases, such as driving. It introduces the concept of "audible browsing", where music is played at a given time interval (5-10s) before moving on to another point in a listener’s music library. When desired content is played the listener can force touch to pin that album and play from within it.
 					</p>
 
 					<hr class="lead-hr">
