--- a/amazon-music.html
+++ b/amazon-music.html
@@ -21,17 +21,69 @@
 						<a href="index.html"><img class="back-btn-crumb" src="images/back.svg"></a><a href="index.html">chriseddie.com</a> <span class="crumb"> / </span> Amazon Music
 					</p>
 
-					<h1>Cloud Player Native</h1>
+					<h1>Cloud Player Desktop app</h1>
 
 					<p>
-						I'm currently working on getting work samples here.
+						While working at the digital music development center for Amazon in San Francisco, I had the opportunity to lead the design of Amazon’s largest native software release to date. The Amazon Cloud Player desktop app.
 					</p>
 
 					<hr class="lead-hr">
 
-					<!-- <img class="img" src="images/.jpg">
+					<img class="img" src="images/morpho-01.jpg">
 					<hr>
-					<p class="fig">Description</p> -->
+					<p class="fig">Amazon Cloud Player for PC. Known today at Prime Music.</p>
+
+					<br>
+
+					<p>
+						The two primary features of the Cloud Player app were to serve as a vehicle for downloading purchased content from Amazon.com and importing music to cloud storage. Traditionally, the only way to download purchases was to use a peice of native software called the Amazon Music Downloader (AMD). Importing music would require another peice of software called the Amazon Music Importer (AMI).
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/morpho-02.jpg">
+					<hr>
+					<p class="fig">Download prompt after purchase of music from Amazon.com</p>
+
+					<br>
+
+					<p>
+						At the time of it’s development, the Cloud Player app was meant to serve an even greater purpose as the utility for side-loading content to Amazon devices such as the Kindle Fire and Fire Phone. When considering side-loading, uploading to the Amazon Cloud, Downloading to device, or making playlists, it became clear to me that the largest painpoint and requested features from users was the ability to take music from it’s source and move it to different destinations.
+					</p>
+
+					<br>
+
+					<p>
+						Instead of designing a different method of moving music for each use case, I created a sidebar on the right for all destinations. Music could be dragged from the source (cloud or computer) and dropped onto a destination.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/morpho-03.jpg">
+					<hr>
+					<p class="fig">Source toggle defines cloud or computer music and provides all possible destinations in the sidebar.</p>
+
+					<br>
+
+					<p>
+						With a large library of content, performance became something we had to remain cognizant of. Instead of navigating away from the main library to show the details of an album, I designed a quick access point to songs using a modal / popover display.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/morpho-04.jpg">
+					<hr>
+					<p class="fig">Album details shown quickly onClick.</p>
+
+					<br>
+
+					<p>
+						The Cloud Player native app has now been adapted to the <a href="https://www.amazon.com/b/ref=dmm_primeup_apps?ie=UTF8&node=2658409011">Amazon Music app</a>. Amazon’s streaming subscription music service.
+					</p>
+
+					<br><br>
+
+					<hr>
 
 					<br>
 
@@ -39,7 +91,7 @@
 						<b>Date:</b> 2012 - 2013<br>
 						<b>Company:</b> Amazon (A2Z Development Center)<br>
 						<b>Project:</b> Cloud Player Native<br>
-						<b>Role:</b> UI Designer<br>
+						<b>Role:</b> UX Designer<br>
 						<b>Team:</b> 20 software engineers, 1 product manager.
 
 					</p>
