--- a/amazon-music.html
+++ b/amazon-music.html
@@ -31,7 +31,7 @@
 
 					<img class="img" src="images/morpho-01.jpg">
 					<hr>
-					<p class="fig">Amazon Cloud Player for PC. Known today at Prime Music.</p>
+					<p class="fig">Amazon Cloud Player for PC.</p>
 
 					<br>
 
@@ -48,7 +48,7 @@
 					<br>
 
 					<p>
-						At the time of it’s development, the Cloud Player app was meant to serve an even greater purpose as the utility for side-loading content to Amazon devices such as the Kindle Fire and Fire Phone. When considering side-loading, uploading to the Amazon Cloud, Downloading to device, or making playlists, it became clear to me that the largest painpoint and requested features from users was the ability to take music from it’s source and move it to different destinations.
+						At the time of it’s development, the Cloud Player app was meant to serve an even greater purpose as the utility for side-loading content to Amazon devices such as the Kindle Fire and Fire Phone. When considering side-loading, uploading to the Amazon Cloud, Downloading to device, or making playlists, it became clear to me that the largest painpoint and requested features from users was the ability to take music from it’s source and move it to one of many different destinations.
 					</p>
 
 					<br>
