--- a/amazon.html
+++ b/amazon.html
@@ -24,16 +24,40 @@
 					<h1>Cloud Player Recommendations</h1>
 
 					<p>
-						I'm currently working on getting work samples here.
+						One of the many things Amazon is known for is it’s powerful recommendation engine. For a large part of my time there, I worked on an all engineer backend service team that was focused on sourcing music-related data and using it in interesting ways to help customers discover new music and increase digital music sales. One of the projects our team launched was real-time recommendations within Cloud Player based on the music a customer was currently listening to.
 					</p>
 
 					<hr class="lead-hr">
 
-					<!-- <img class="img" src="images/.jpg">
+					<img class="img" src="images/mulder-01.jpg">
 					<hr>
-					<p class="fig">Description</p> -->
+					<p class="fig">Recommendations panel showing music suggestions based on listening history.</p>
 
 					<br>
+
+					<p>
+						Providing contextual relvance and the ability to tune suggested content is key requirement to the Amazon recommendation specifications. I built a stack UI that a customer could drill into to learn how the content was suggested and a way to tune the engine to show more or less content of a specific type.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/mulder-02.jpg">
+					<hr>
+					<p class="fig">Tuning the recommendation engine by providing contextual relevance.</p>
+
+					<br>
+
+					<p>
+						Furthing the stack UI, a customer could also drill down to recommended collections and view the content within that collection. Song samples coul be played inline and purchases made directly from Cloud Player. Building the first “off site” Amazon purchase experience to date required extensive UX work to maintain the expectation of simplicity that comes with buying from Amazon.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/mulder-03.jpg">
+					<hr>
+					<p class="fig">Collection detail view allowed sampling and the first off-site purcahse experience from Amazon.</p>
+
+					<br><br>
 
 					<p>
 						<b>Date:</b> 2011 - 2012<br>
