--- a/mf.html
+++ b/mf.html
@@ -22,14 +22,26 @@
 					</p>
 
 					<p>
-						I'm currently working on getting work samples here.
+						I received my introduction to User Experience design in 2008 at Musician’s Friend (Guitar Center) — the world’s largest direct marketer of musical instruments. I assisted in a complete redesign of the company's main ecommerce website and supported it’s development.
 					</p>
 
 					<hr class="lead-hr">
 
-					<!-- <img class="img" src="images/.jpg">
+					<img class="img" src="images/mf-01.jpg">
 					<hr>
-					<p class="fig">Description</p> -->
+					<p class="fig">Musician's Friend website redesign.</p>
+
+					<br>
+
+					<p>
+						I also received my introduction into mobile (before the responsive design movement) as the lead designer on the Musician’s Friend mobile website.
+					</p>
+
+					<hr class="lead-hr">
+
+					<img class="img" src="images/mf-02.jpg">
+					<hr>
+					<p class="fig">Mobile website design.</p>
 
 					<br>
 
