--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
 
 					<div class="flex-container">
 						<div class="flex-item"></div>
-						<a href="http://www.toothandnail.com/artists/6/A_Dream_Too_Late/" target="_blank"><div class="flex-item-timeline"><div class="job-circle"></div></a></div>
+						<a href="https://open.spotify.com/artist/7hZjPEqwCy3BUPaxebd57q" target="_blank"><div class="flex-item-timeline"><div class="job-circle"></div></a></div>
 						<div class="flex-item">
 
-							<a href="http://www.toothandnail.com/artists/6/A_Dream_Too_Late/" target="_blank"><img class="logo png" src="images/toothandnail.png"></a>
+							<a href="https://open.spotify.com/artist/7hZjPEqwCy3BUPaxebd57q" target="_blank"><img class="logo png" src="images/toothandnail.png"></a>
 							<p>2006 - 2008</p>
 							<p>Recording Artist</p>
-							<p><a href="http://www.toothandnail.com/artists/6/A_Dream_Too_Late/">View work &#187;</a></p>
+							<p><a href="https://open.spotify.com/artist/7hZjPEqwCy3BUPaxebd57q">View work &#187;</a></p>
 
 						</div>
 					</div>
