--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<div class="content">
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="https://www.cbtnuggets.com/" target="_blank">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="https://google.com" target="_blank">Google</a> on Search and <a href="https://amazon.com" target="_blank">Amazon</a> on their music apps before that. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.</p>
+						Hey, I’m Chris, a designer from Oregon. I work at <a href="cbtn.html">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="google.html">Google</a> on Search and <a href="amazon-music.html">Amazon</a> on their music apps. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.</p>
 						<br>
 						<p>
 							If you'd like to say hello, shoot me an <a href="mailto:hello@chriseddie.com">email</a>.
