spelling and grammar

--- a/amazon-music.html
+++ b/amazon-music.html
@@ -36,7 +36,7 @@
 					<br>
 
 					<p>
-						The two primary features of the Cloud Player app were to serve as a vehicle for downloading purchased content from Amazon.com and importing music to cloud storage. Traditionally, the only way to download purchases was to use a peice of native software called the Amazon Music Downloader (AMD). Importing music would require another peice of software called the Amazon Music Importer (AMI).
+						The two primary features of the Cloud Player app were to serve as a vehicle for downloading purchased content from Amazon.com and importing music to cloud storage. Traditionally, the only way to download purchases was to use a piece of native software called the Amazon Music Downloader (AMD). Importing music would require another piece of software called the Amazon Music Importer (AMI).
 					</p>
 
 					<hr class="lead-hr">
@@ -48,7 +48,7 @@
 					<br>
 
 					<p>
-						At the time of it’s development, the Cloud Player app was meant to serve an even greater purpose as the utility for side-loading content to Amazon devices such as the Kindle Fire and Fire Phone. When considering side-loading, uploading to the Amazon Cloud, Downloading to device, or making playlists, it became clear to me that the largest painpoint and requested features from users was the ability to take music from it’s source and move it to one of many different destinations.
+						At the time of it’s development, the Cloud Player app was meant to serve an even greater purpose as the utility for side-loading content to Amazon devices such as the Kindle Fire and Fire Phone. When considering side-loading, uploading to the Amazon Cloud, Downloading to device, or making playlists, it became clear to me that the largest painpoint and requested features from users was the ability to take music from its source and move it to one of many different destinations.
 					</p>
 
 					<br>
