--- a/atlas.html
+++ b/atlas.html
@@ -24,7 +24,7 @@
 					<h1>Atlas Music Board</h1>
 
 					<p>
-						Atlas (working title) is a visual pinboard for music discovery and exploration. Users can search millions of songs in the Apple MusicKit database and pin their favorite discoveries to a board that can be shared with friends and identifies trending artists, albums, and songs.<br><br>
+						Atlas (working title) is a visual pinboard for music discovery and exploration. Users can search millions of songs in the Apple MusicKit database and pin their favorite discoveries to a board that can be shared with friends. Additionally, it identifies trending artists, albums, and songs.<br><br>
 
 						This is a reimagined metaphor and design for my app <a href="listenlist.html">Listenlist</a>.
 					</p>
