--- a/cbtn.html
+++ b/cbtn.html
@@ -136,7 +136,7 @@
 					<h1>Learner Experience 2.0</h1>
 
 					<p>
-						We built an app suite that increased engagement and renewals by making our content available anytime, anywhere but to revolutionize the learning experience, we learned that we needed to re-imagine it completely. Learner Experience 2.0 (LX-2) is an effort that I lead to challenge our greatest assumptions about our business and what we know about online education.
+						We built an app suite that increased engagement and renewals by making our content available anytime, anywhere, but to revolutionize the learning experience we learned that we needed to re-imagine it completely. Learner Experience 2.0 (LX-2) is an effort that I lead to challenge our greatest assumptions about our business and what we know about online education.
 					</p>
 
 					<hr class="lead-hr">
@@ -160,7 +160,7 @@
 					<br>
 
 					<p>
-						Learner Experience 2.0 will replace the current training app suite and become the primary method for consuming CBT Nuggets learning content. A major part of this effort is to create a platform that can transcend video content alone and host a wide array of learning tools in one coheesive experience.
+						Learner Experience 2.0 will replace the current training app suite and become the primary method for consuming CBT Nuggets learning content. A major part of this effort is to create a platform that can transcend video content alone and host a wide array of learning tools in one cohesive experience.
 					</p>
 
 					<hr class="lead-hr">
