--- a/mf.html
+++ b/mf.html
@@ -22,7 +22,7 @@
 					</p>
 
 					<p>
-						I received my introduction to User Experience design in 2008 at Musician’s Friend (Guitar Center) — the world’s largest direct marketer of musical instruments. I assisted in a complete redesign of the company's main ecommerce website and supported it’s development.
+						I received my introduction to User Experience design in 2008 at Musician’s Friend (Guitar Center) — the world’s largest direct marketer of musical instruments. I assisted in a complete redesign of the company's main ecommerce website and supported its development.
 					</p>
 
 					<hr class="lead-hr">
