--- a/mockfolio.html
+++ b/mockfolio.html
@@ -79,8 +79,12 @@
 					<hr class="lead-hr">
 
 					<img class="img" src="images/mockfolio-backend-2.jpg">
+
+					<br>
+
+					<img class="img" src="images/mockfolio-code.jpg">
 					<hr>
-					<p class="fig">Screen editor.</p>
+					<p class="fig">Editor view and a snapshot of my code.</p>
 
 					<br>
 
