--- a/cbtn.html
+++ b/cbtn.html
@@ -172,7 +172,7 @@
 					<br>
 
 					<p>
-						<b>Date:</b> May 2017 - Present<br>
+						<b>Date:</b> May 2017 - January 2018<br>
 						<b>Company:</b> CBT Nuggets<br>
 						<b>Project:</b> Learner Experience 2.0<br>
 						<b>Role:</b> Design Lead<br>
