--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<div class="content">
 					<p>
-						Hey, I’m Chris, a designer from Oregon. I work at <a href="cbtn.html">CBT Nuggets</a>, helping people accomplish their dreams through online education. Before that, I worked at <a href="google.html">Google</a> on Search and <a href="amazon-music.html">Amazon</a> on their music apps. I’m passionate about building technology that changes people’s lives and designing experiences that are functional and beautiful.</p>
+						Hey, I’m Chris, a designer from Oregon. I work at <a href="netflix.html">Netflix</a>, re-imagining internet TV for kids. Before that, I worked at <a href="google.html">Google</a> on search and at <a href="amazon-music.html">Amazon</a> on music apps. I’m passionate about building technology that challenges the status quo and designing experiences that are minimalistic, functional and beautiful.</p>
 						<br>
 						<p>
 							If you'd like to say hello, shoot me an <a href="mailto:hello@chriseddie.com">email</a>.
@@ -36,12 +36,25 @@
 				<div class="content">
 
 					<div class="flex-container">
+						<div class="flex-item left">
+
+							<a href="netflix.html"><img class="logo" src="images/netflix.svg"></a>
+							<p>2018 - Present</p>
+							<p>Sr. Product Designer</p>
+							<p><a href="netflix.html">View work &#187;</a></p>
+
+						</div>
+						<a href="netflix.html"><div class="flex-item-timeline"><div class="job-circle"></div></a></div>
+						<div class="flex-item"></div>
+					</div>
+
+					<div class="flex-container">
 					  <div class="flex-item"></div>
 					  <div class="flex-item-timeline"><a href="cbtn.html"><div class="job-circle"></div></a></div>
 					  <div class="flex-item">
 
 							<a href="cbtn.html"><img class="logo" src="images/cbtnuggets.svg"></a>
-							<p>2014 - Present</p>
+							<p>2014 - 2017</p>
 							<p>Principal Product Designer</p>
 							<p><a href="cbtn.html">View work &#187;</a></p>
 
